Fix unclickable icon picker on iOS only

--- a/components/CustomButton.module.css
+++ b/components/CustomButton.module.css
@@ -10,6 +10,7 @@
   gap: 8px;
   text-align: center;
   font-size: medium;
+  font-weight: normal;
   --btn-text-light: hsla(0, 0%, 100%, 75%);
   --btn-text-dark: hsla(0, 0%, 25%, 75%);
 }
